--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+*{
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    scroll-snap-type: mandatory;
+}
